Fix overlap of elements of grid toolbar in narrow cases
ERM39064

[4.5.x]

--- a/resources/stylesheet/data/paginator.less
+++ b/resources/stylesheet/data/paginator.less
@@ -3,8 +3,15 @@
 	position: relative;
 	height: 46px;
 	border-top: 1px solid #e3e3e3;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	.oojsplus-data-paginator {
+		flex:auto;
+	}
 	.static-controls {
-		position: absolute;
+		flex: auto;
+		text-align: right;
 		top: 7px;
 		right: 20px;
 		.oo-ui-labelWidget {
